fixed overflowy bug

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,12 +1,7 @@
 body {
   margin: 0;
-  overflow-y: hidden;
-  overflow-x: hidden;
   height: 100vh;
-}
-
-.overflowy-visible {
-  overflow-y: visible;
+  overflow-x: hidden;
 }
 
 .App {
@@ -30,6 +25,6 @@ body {
 .background-image {
   top: 0;
   left: 0;
-  width: 100vw;
+  max-width: 100vw;
   z-index: -100;
 }
