--- a/client/src/css/News.css
+++ b/client/src/css/News.css
@@ -6,6 +6,7 @@
   font-weight: 100;
   font-size: 22px;
   width: 100vw;
+  min-height: 100vh;
   text-align: center;
 }
 
